# agentkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/: model_overrides.json
docs/: pi-ai-gap-review.md
examples/: basic_completion.py
scripts/: generate_models.py
src/agentkit/: __init__.py  exceptions.py
src/agentkit/agent/: __init__.py  agent.py  config.py  loop.py  state.py  tool.py  types.py
src/agentkit/llm/: __init__.py  _hooks.py  _metadata.py  api.py  context.py  env.py  model.py  registry.py  streaming.py  tools.py
src/agentkit/llm/models/: __init__.py  builtins.py  catalog.py  costs.py  generated.py  presets.py  registry.py
src/agentkit/llm/providers/: __init__.py  _utils.py  base.py  builtins.py  registry.py
src/agentkit/llm/providers/anthropic/: _convert.py  _parse.py  provider.py
src/agentkit/llm/providers/google/: __init__.py  _convert.py  _parse.py  provider.py
src/agentkit/llm/providers/openai/: _convert.py  _parse.py  provider.py
src/agentkit/llm/providers/openai_responses/: __init__.py  _convert.py  _parse.py  provider.py
src/agentkit/llm/types/: __init__.py  content.py  messages.py  response.py
tests/: conftest.py
tests/agent/: conftest.py  test_agent.py  test_loop.py  test_state.py  test_tool.py  test_types.py
tests/llm/: test_api.py  test_context.py  test_env.py  test_hooks.py  test_imports.py  test_messages.py  test_models.py  test_presets.py  test_registry.py  test_streaming.py  test_tools.py
tests/llm/providers/: test_google.py  test_openai_responses.py  test_openai_ws.py  test_provider_conversions.py  test_provider_exports.py
(+3 files in other folders)
